adopt KafkaTestEventCollector under the FakeKafkaConsumer facade (WS2 Tier 2)
Replace FakeKafkaConsumer's 5 bespoke Vert.x-based collection classes
(VertxMessageCollectingTopicConsumer, AggregateMessageCollector,
TopicFilterIngMessageCollector, GroupedMessageCollector,
GroupedCollectedMessages) with data-import-test-support's
KafkaTestEventCollector, per docs/test-quality-improvement-plan.md's
WS2 Tier 2. It continuously drains the broker into an in-memory
per-topic index on a background thread, so an already-arrived message
matches on the first check instead of a test waiting out a broker-poll
timeout.

FakeKafkaConsumer's public API is unchanged (aside from consume() now
taking the Kafka bootstrap servers string instead of a Vertx instance,
since the raw-client-based collector doesn't need one), so the 9
*EventMessageChecks facade classes and their IT call sites - the
inventory-domain per-entity grouping this plan explicitly keeps local -
needed no changes. discardAllMessages() now records a cutoff timestamp
that every accessor filters on, rather than clearing a map, since the
collector has no such operation and recreating a consumer group before
every test risked reintroducing flakiness via partition-assignment lag.

Also drops getMessagesForItemWithInstanceIdKey (pre-existing dead code,
surfaced by this rewrite; had zero callers) and EventMessage's now-
unused Vert.x-KafkaConsumerRecord-based fromConsumerRecord overload.

Verified with a full mvn clean verify: 1125 tests, 0 failures, the
same single pre-existing/unrelated IterationJobRunnerIT error as
before this change (a RejectedExecutionException unrelated to Kafka
consumption).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TPXwftyaJ4VBq2NupSkkCy